--- a/index.html
+++ b/index.html
@@ -8,8 +8,17 @@
 </head>
 <body>
     <div class="container">
-        <div class="leftside"></div>
-        <div class="rightside"></div>
+        <div class="leftside">
+            <div class="profiletext">
+                <div class="imgBx">
+                    <img src="/Assets/Imagens/466010182_1065564368640996_8863804298447933928_n.jpg" alt="">
+                </div>
+                <h2>Rock Hudson <br><span>Analista de Sistemas</span></h2>
+            </div>
+        </div>
+        <div class="rightside">
+
+        </div>
     </div>
 </body>
 </html>
