Codando Left side

--- a/index.html
+++ b/index.html
@@ -5,17 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/style.css">
     <title>Rock Hudson CV</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+       
     <div class="container">
         <div class="leftside">
             <div class="profiletext">
                 <div class="imgBx">
-                    <img src="/Assets/Imagens/466010182_1065564368640996_8863804298447933928_n.jpg" alt="">
+                    <img src="/Assets/Imagens/466010182_1065564368640996_8863804298447933928_n.jpg " alt="">
                 </div>
                 <h2>Rock Hudson <br><span>Analista de Sistemas</span></h2>
             </div>
+            <div class="contactinfo">
+                <h3 class="title">Contato</h3>
+                <ul>
+                    <li>
+                        <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">(31) 99195-4947</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">avelarmillas@gmail.com</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">linkedin.com/in/rockavelar/</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i>
+                        </span>
+                        <span class="text">Contagem, MG,  Brasil</span> 
+                    </li>
+                </ul>
+            </div>
         </div>
+        
         <div class="rightside">
 
         </div>
